# wc

./: Cargo.toml  README.md
src/: cli.yml  main.rs
