[package]
name = "wc"
version = "0.1.0"
authors = ["darnold <davidxarnold@soundofcorduroy.com>"]
edition = "2018"
description = "Rust implementation of wc command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
unicode-segmentation = "1.7.1"
rand = "0.8.3"
scopeguard = "1.1.0"